infra/argo/manifests/argo.svc.yaml
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: null
  labels:
    app: argo-server
  name: argo-server
  namespace: argo
spec:
  ports:
  - name: 2746-2746
    port: 2746
    protocol: TCP
    targetPort: 2746
  selector:
    app: argo-server
  type: ClusterIP
status:
  loadBalancer: {}
